--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ limitations under the License.
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-messaging.js"></script>
 <script>
   firebase.initializeApp({
-    'messagingSenderId': '103953800507'
+    'messagingSenderId': '425149788979'
   });
 </script>
 <script>
@@ -92,7 +92,7 @@ limitations under the License.
   // [END get_messaging_object]
   // [START set_public_vapid_key]
   // Add the public key generated from the console here.
-  // messaging.usePublicVapidKey('<YOUR_PUBLIC_VAPID_KEY_HERE>');
+  messaging.usePublicVapidKey('BLHJGSUp3sclHMKRV-PovXoCw35EqF1x-7OysjG8IqLLjYFA14RtZC1ILsoudxBpjhp0B7qxixQ6Um__gookFdY');
   // [END set_public_vapid_key]
 
   // IDs of divs that display Instance ID token UI or request permission UI.
