--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ limitations under the License.
 <!-- <script src="/__/firebase/5.0.0/firebase-app.js"></script>
 <script src="/__/firebase/5.0.0/firebase-messaging.js"></script>
 <script src="/__/firebase/init.js"></script> -->
-<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-messaging.js"></script>
 <script>
   firebase.initializeApp({
     'messagingSenderId': '425149788979'
@@ -92,7 +92,7 @@ limitations under the License.
   // [END get_messaging_object]
   // [START set_public_vapid_key]
   // Add the public key generated from the console here.
-  //messaging.usePublicVapidKey('BLHJGSUp3sclHMKRV-PovXoCw35EqF1x-7OysjG8IqLLjYFA14RtZC1ILsoudxBpjhp0B7qxixQ6Um__gookFdY');
+  messaging.usePublicVapidKey('BLHJGSUp3sclHMKRV-PovXoCw35EqF1x-7OysjG8IqLLjYFA14RtZC1ILsoudxBpjhp0B7qxixQ6Um__gookFdY');
   // [END set_public_vapid_key]
 
   // IDs of divs that display Instance ID token UI or request permission UI.
