--- a/sample.html
+++ b/sample.html
@@ -19,7 +19,7 @@ limitations under the License.
 </head>
 <body>
 sample.html
-<sciprt>
+<script>
 alert('pushtoken='+window.localStorage.getItem(SAFEON_KEY_PUSH_TOKEN));
 </script>
 
