--- a/sample.html
+++ b/sample.html
@@ -15,13 +15,15 @@ limitations under the License.
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-</head>
-<body>
-sample.html
-<script>
-alert('pushtoken='+window.localStorage.getItem(SAFEON_KEY_PUSH_TOKEN));
+  <script>
+    function checkToken(){
+      alert('pushtoken='+window.localStorage.getItem('spnsPushToken'));
+    }
 </script>
+</head>
+<body onload='javascript:'checkToken();'>
+sample.html
+
 
 </body>
 </html>
