--- a/sample.html
+++ b/sample.html
@@ -21,7 +21,7 @@ limitations under the License.
     }
 </script>
 </head>
-<body onload='javascript:'checkToken();'>
+<body onload="javascript:checkToken();">
 sample.html
 
 
